--- a/learn-m365-pr/achievements.yml
+++ b/learn-m365-pr/achievements.yml
@@ -530,3 +530,13 @@ achievements:
   title: Quickly find relevant data to respond to legal and regulatory obligations using Microsoft Purview eDiscovery (Premium) and Microsoft Purview Audit (Premium)
   summary: Quickly find relevant data to respond to legal and regulatory obligations using Microsoft Purview eDiscovery (Premium) and Microsoft Purview Audit (Premium)
   iconUrl: /training/achievements/investigate-and-respond-with-relevant-data.svg
+- uid: learn-m365.compmgmt.trophy
+  type: trophy
+  title: Reduce risk with Microsoft Purview Compliance Manager
+  summary: Reduce risk with Microsoft Purview Compliance Manager
+  iconUrl: /training/achievements/reduce-risk-with-microsoft-compliance-manager.svg
+- uid: learn-m365.m365-information-protection.trophy
+  type: trophy
+  title: Protect enterprise information with Microsoft 365
+  summary: Protect enterprise information with Microsoft 365
+  iconUrl: /training/achievements/protect-enterprise-information-microsoft-365.svg
