--- a/learn-m365-pr/m365/m365-compliance-information-governance/govern-your-data.yml
+++ b/learn-m365-pr/m365/m365-compliance-information-governance/govern-your-data.yml
@@ -5,7 +5,7 @@ metadata:
   title: Govern your data
   description: Learn how Microsoft Purview information protection and data lifecycle management solutions help you protect and govern your data, throughout its lifecycle – wherever it lives, or wherever it travels. 
   ms.date: 05/02/2022
-  author: beccarobins
+  author: riswinto
   ms.author: riswinto
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
