Updates missed metadata

--- a/learn-m365-pr/wwl/m365-compliance-information-manage-records/manage-monitor-remediate.yml
+++ b/learn-m365-pr/wwl/m365-compliance-information-manage-records/manage-monitor-remediate.yml
@@ -5,8 +5,8 @@ metadata:
   title: Manage, monitor, and remediate records
   description:  Learn how to use intelligent classification to automate and simplify the retention schedule for regulatory, legal, and business-critical records in your organization. 
   ms.date: 04/29/2022
-  author: beccarobins
-  ms.author: beccarobins
+  author: riswinto
+  ms.author: riswinto
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
 
