--- a/learn-m365-pr/wwl/m365-compliance-information-prevent-data-loss/define-policy-settings.yml
+++ b/learn-m365-pr/wwl/m365-compliance-information-prevent-data-loss/define-policy-settings.yml
@@ -5,8 +5,8 @@ metadata:
   title:  Define policy settings for your DLP policy
   description: Learn about the two workflow branches and how to customize the policy settings for your new DLP policy. 
   ms.date: 04/21/2022
-  author: beccarobins
-  ms.author: beccarobins
+  author: riswinto
+  ms.author: riswinto
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
 
