--- a/learn-m365-pr/wwl/m365-compliance-information-prevent-data-loss/identify-content.yml
+++ b/learn-m365-pr/wwl/m365-compliance-information-prevent-data-loss/identify-content.yml
@@ -5,8 +5,8 @@ metadata:
   title: Identify content to protect
   description: Learn how to identify which content you need to protect in your organization. 
   ms.date: 04/29/2022
-  author: beccarobins
-  ms.author: beccarobins
+  author: riswinto
+  ms.author: riswinto
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
 
