--- a/learn-m365-pr/wwl/m365-compliance-information-prevent-data-loss/introduction.yml
+++ b/learn-m365-pr/wwl/m365-compliance-information-prevent-data-loss/introduction.yml
@@ -4,8 +4,8 @@ metadata:
   title: Introduction
   description: Learn about the learning objectives and prerequisites for this training module.
   ms.date: 04/29/2022
-  author: beccarobins
-  ms.author: beccarobins
+  author: riswinto
+  ms.author: riswinto
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
 title: Introduction
