--- a/learn-m365-pr/wwl/m365-compliance-information-prevent-data-loss/knowledge-check.yml
+++ b/learn-m365-pr/wwl/m365-compliance-information-prevent-data-loss/knowledge-check.yml
@@ -5,8 +5,8 @@ metadata:
   title: Knowledge check
   description: Check what you've learned about data loss prevention in Microsoft Purview. 
   ms.date: 08/06/2021
-  author: beccarobins
-  ms.author: beccarobins
+  author: riswinto
+  ms.author: riswinto
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
  
