--- a/learn-m365-pr/wwl/m365-compliance-information-prevent-data-loss/manage-monitor-remediate.yml
+++ b/learn-m365-pr/wwl/m365-compliance-information-prevent-data-loss/manage-monitor-remediate.yml
@@ -5,8 +5,8 @@ metadata:
   title: View data loss prevention reports
   description: Learn about the data loss prevention reports available in the compliance portal. 
   ms.date: 09/13/2022
-  author: beccarobins
-  ms.author: beccarobins
+  author: riswinto
+  ms.author: riswinto
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
 
