--- a/learn-m365-pr/wwl/m365-compliance-information-prevent-data-loss/prepare-endpoint-dlp.yml
+++ b/learn-m365-pr/wwl/m365-compliance-information-prevent-data-loss/prepare-endpoint-dlp.yml
@@ -5,8 +5,8 @@ metadata:
   title:  Prepare Endpoint DLP
   description: Learn how to configure data loss prevention for endpoints, Windows 10 devices. 
   ms.date: 09/13/2022
-  author: beccarobins
-  ms.author: beccarobins
+  author: riswinto
+  ms.author: riswinto
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
 
