--- a/learn-m365-pr/wwl/m365-compliance-information-prevent-data-loss/test-policy-settings.yml
+++ b/learn-m365-pr/wwl/m365-compliance-information-prevent-data-loss/test-policy-settings.yml
@@ -5,8 +5,8 @@ metadata:
   title:  Test and create your DLP policy
   description: Learn how to test your new DLP policy, and when it's ready, create it. 
   ms.date: 12/07/2021
-  author: beccarobins
-  ms.author: beccarobins
+  author: riswinto
+  ms.author: riswinto
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
 
