--- a/learn-m365-pr/wwl/m365-compliance-information-prevent-data-loss/view-alerts.yml
+++ b/learn-m365-pr/wwl/m365-compliance-information-prevent-data-loss/view-alerts.yml
@@ -5,8 +5,8 @@ metadata:
   title:  Manage DLP reports in the Microsoft Purview compliance portal
   description: Learn how to manage the DLP alerts you see in the Microsoft Purview compliance portal. 
   ms.date: 09/13/2022
-  author: beccarobins
-  ms.author: beccarobins
+  author: riswinto
+  ms.author: riswinto
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
 
