--- a/learn-m365-pr/wwl/m365-compliance-information-protect-information/configure-sensitivity-labels.yml
+++ b/learn-m365-pr/wwl/m365-compliance-information-protect-information/configure-sensitivity-labels.yml
@@ -5,8 +5,8 @@ metadata:
   title:  Configure sensitivity labels
   description: Learn how to discover, classify, and protect sensitive and business-critical content throughout its lifecycle across your organization. 
   ms.date: 04/29/2022
-  author: beccarobins
-  ms.author: beccarobins
+  author: riswinto
+  ms.author: riswinto
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
 
