--- a/learn-m365-pr/wwl/m365-compliance-information-classify-data/explore-content.yml
+++ b/learn-m365-pr/wwl/m365-compliance-information-classify-data/explore-content.yml
@@ -5,8 +5,8 @@ metadata:
   title: Explore labeled and sensitive content
   description: Learn about the information available to help you understand your data landscape and know your data.
   ms.date: 11/03/2021
-  author: beccarobins
-  ms.author: beccarobins
+  author: riswinto
+  ms.author: riswinto
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
 
