--- a/learn-m365-pr/wwl/m365-compliance-information-classify-data/understand-activities.yml
+++ b/learn-m365-pr/wwl/m365-compliance-information-classify-data/understand-activities.yml
@@ -5,8 +5,8 @@ metadata:
   title: Understand activities related to your data
   description: Learn about the information available to help you understand your data landscape and know your data.
   ms.date: 04/29/2022
-  author: beccarobins
-  ms.author: beccarobins
+  author: riswinto
+  ms.author: riswinto
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
 
