--- a/learn-m365-pr/wwl/m365-compliance-information-classify-data/using-sensitive-information-types.yml
+++ b/learn-m365-pr/wwl/m365-compliance-information-classify-data/using-sensitive-information-types.yml
@@ -5,8 +5,8 @@ metadata:
   title:  Classify data using sensitive information types
   description: Learn about the information available to help you understand your data landscape and know your data.
   ms.date: 05/02/2022
-  author: beccarobins
-  ms.author: beccarobins
+  author: riswinto
+  ms.author: riswinto
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
 
