--- a/learn-m365-pr/wwl/m365-compliance-information-govern-information/summary-knowledge-check.yml
+++ b/learn-m365-pr/wwl/m365-compliance-information-govern-information/summary-knowledge-check.yml
@@ -5,8 +5,8 @@ metadata:
   title: Summary and knowledge check
   description: Learn how to manage your content lifecycle using solutions to import, store, and classify business-critical data so you can keep what you need and delete what you don't. 
   ms.date: 05/02/2022
-  author: beccarobins
-  ms.author: beccarobins
+  author: riswinto
+  ms.author: riswinto
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
  
