--- a/learn-m365-pr/wwl/m365-compliance-information-prevent-data-loss/data-loss-prevention-overview.yml
+++ b/learn-m365-pr/wwl/m365-compliance-information-prevent-data-loss/data-loss-prevention-overview.yml
@@ -5,8 +5,8 @@ metadata:
   title: Data loss prevention overview
   description: Learn about data loss prevention policies, what they're made up of, and how to implement them. 
   ms.date: 05/02/2022
-  author: beccarobins
-  ms.author: beccarobins
+  author: riswinto
+  ms.author: riswinto
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
 
