--- a/learn-m365-pr/wwl/m365-compliance-information-prevent-data-loss/summary.yml
+++ b/learn-m365-pr/wwl/m365-compliance-information-prevent-data-loss/summary.yml
@@ -5,8 +5,8 @@ metadata:
   title: Summary
   description: Review what you've learned about data loss prevention in Microsoft Purview. 
   ms.date: 07/07/2021
-  author: beccarobins
-  ms.author: beccarobins
+  author: riswinto
+  ms.author: riswinto
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
  
