--- a/learn-m365-pr/wwl/m365-compliance-information-protect-information/information-protection-overview.yml
+++ b/learn-m365-pr/wwl/m365-compliance-information-protect-information/information-protection-overview.yml
@@ -5,8 +5,8 @@ metadata:
   title: Information protection overview
   description: Learn how to discover, classify, and protect sensitive and business-critical content throughout its lifecycle across your organization. 
   ms.date: 07/20/2021
-  author: beccarobins
-  ms.author: beccarobins
+  author: riswinto
+  ms.author: riswinto
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
 
