--- a/learn-m365-pr/wwl/m365-compliance-insider-manage-insider-risk/knowledge-check.yml
+++ b/learn-m365-pr/wwl/m365-compliance-insider-manage-insider-risk/knowledge-check.yml
@@ -5,8 +5,8 @@ metadata:
   title: Knowledge check
   description: Microsoft Purview Insider Risk Management helps organizations address internal risks, such as IP theft, fraud, and sabotage. Learn about insider risk management and how Microsoft technologies can help you detect, investigate, and take action on risky activities in your organization. 
   ms.date: 08/06/2021
-  author: beccarobins
-  ms.author: beccarobins
+  author: kenMAG
+  ms.author: kelawson
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
  
