--- a/learn-m365-pr/wwl/m365-security-data-loss/data-loss-prevention.yml
+++ b/learn-m365-pr/wwl/m365-security-data-loss/data-loss-prevention.yml
@@ -5,8 +5,8 @@ metadata:
   title: Use data loss prevention (DLP) policies to protect your data
   description: Learn how information protection helps organizations protect data to prevent data loss or theft.
   ms.date: 10/29/2021
-  author: beccarobins
-  ms.author: beccarobins
+  author: riswinto
+  ms.author: riswinto
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
 durationInMinutes: 3
