--- a/learn-m365-pr/wwl/m365-security-data-loss/define-sensitive-data.yml
+++ b/learn-m365-pr/wwl/m365-security-data-loss/define-sensitive-data.yml
@@ -5,8 +5,8 @@ metadata:
   title: Learn how information protection helps organizations protect data to prevent data loss or theft.
   description: Learn how to define sensitive data
   ms.date: 02/11/2022
-  author: beccarobins
-  ms.author: beccarobins
+  author: riswinto
+  ms.author: riswinto
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
 durationInMinutes: 3
