--- a/learn-m365-pr/wwl/m365-security-data-loss/introduction.yml
+++ b/learn-m365-pr/wwl/m365-security-data-loss/introduction.yml
@@ -5,8 +5,8 @@ metadata:
   title: Introduction to Microsoft Purview Data Loss Prevention
   description: Learn how information protection helps organizations protect data to prevent data loss or theft.
   ms.date: 05/02/2022
-  author: beccarobins
-  ms.author: beccarobins
+  author: riswinto
+  ms.author: riswinto
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
 durationInMinutes: 1
