--- a/learn-m365-pr/wwl/m365-security-data-loss/summary-knowledge-check.yml
+++ b/learn-m365-pr/wwl/m365-security-data-loss/summary-knowledge-check.yml
@@ -5,8 +5,8 @@ metadata:
   title: Summary and knowledge check
   description: Learn how information protection helps organizations protect data to prevent data loss or theft. 
   ms.date: 10/16/2019
-  author: beccarobins
-  ms.author: beccarobins
+  author: riswinto
+  ms.author: riswinto
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
 durationInMinutes: 5
