--- a/learn-m365-pr/wwl/m365-security-threat-protect/introduction.yml
+++ b/learn-m365-pr/wwl/m365-security-threat-protect/introduction.yml
@@ -5,8 +5,8 @@ metadata:
   title: Introduction to Microsoft Defender for Endpoint
   description: Learn how Microsoft Defender for Endpoint can help your organization stay secure. 
   ms.date: 04/22/2022
-  author: beccarobins
-  ms.author: beccarobins
+  author: kenMAG
+  ms.author: kelawson
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
 durationInMinutes: 14
