--- a/learn-m365-pr/wwl/m365-threat-remediate/configure-protect-detect.yml
+++ b/learn-m365-pr/wwl/m365-threat-remediate/configure-protect-detect.yml
@@ -5,8 +5,8 @@ metadata:
   title: Configure, protect, and detect
   description: Learn about the Microsoft Defender for Office 365 component of Microsoft 365 Defender. 
   ms.date: 04/25/2022
-  author: beccarobins
-  ms.author: beccarobins
+  author: kenMAG
+  ms.author: kelawson
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
 durationInMinutes: 28
