--- a/learn-m365-pr/wwl/m365-threat-remediate/simulate-attacks.yml
+++ b/learn-m365-pr/wwl/m365-threat-remediate/simulate-attacks.yml
@@ -5,8 +5,8 @@ metadata:
   title: Simulate attacks
   description: Learn how Microsoft Defender for Office 365 can help train your defenders with threat simulations.
   ms.date: 04/25/2022
-  author: beccarobins
-  ms.author: beccarobins
+  author: kenMAG
+  ms.author: kelawson
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
 durationInMinutes: 5
