--- a/learn-m365-pr/wwl/m365-threat-remediate/summary-knowledge-check.yml
+++ b/learn-m365-pr/wwl/m365-threat-remediate/summary-knowledge-check.yml
@@ -5,8 +5,8 @@ metadata:
   title: Summary and knowledge check
   description: Learn about the Microsoft Defender for Office 365 component of Microsoft 365 Defender.
   ms.date: 07/16/2021
-  author: beccarobins
-  ms.author: beccarobins
+  author: kenMAG
+  ms.author: kelawson
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
 durationInMinutes: 5
