change author of introduction to syntext from telmante to rui

--- a/learn-m365-pr/m365/syntex-intro/index.yml
+++ b/learn-m365-pr/m365/syntex-intro/index.yml
@@ -4,8 +4,8 @@ metadata:
   title: Introduction to SharePoint Syntex
   description: Learn about SharePoint Syntex, including the business problem it solves, how it works, and common scenarios for use.
   ms.date: 06/07/2022
-  author: temanteleary
-  ms.author: teleary
+  author: maggierui
+  ms.author: ruihu
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
   ms.custom: intro-internal
