--- a/learn-m365-pr/m365/m365-compliance-insider-prepare-communication-compliance/introduction-policies.yml
+++ b/learn-m365-pr/m365/m365-compliance-insider-prepare-communication-compliance/introduction-policies.yml
@@ -5,8 +5,8 @@ metadata:
   title: Introduction to communication compliance policies 
   description:  Microsoft Purview Communications Compliance is a solution that helps organizations address code-of-conduct policy violations in company communications, while also assisting organizations in regulated industries meet specific supervisory compliance requirements. Communication Compliance uses machine learning to intelligently detect violations across different communication channels such as Microsoft Teams, Exchange Online, or Yammer messages.
   ms.date: 05/09/2022
-  author: beccarobins
-  ms.author: beccarobins
+  author: hrasheed-msft
+  ms.author: hrasheed
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
 
