--- a/learn-m365-pr/m365/m365-compliance-insider-manage-customer-lockbox/summary-knowledge-check.yml
+++ b/learn-m365-pr/m365/m365-compliance-insider-manage-customer-lockbox/summary-knowledge-check.yml
@@ -28,7 +28,7 @@ quiz:
         isCorrect: false
         explanation: "Currently, the maximum period for the access permissions granted to the Microsoft engineer is 4 hours. The Microsoft engineer can also request a shorter period."
 
-    - content: "How long does the designated approver at the customer organization have to respond to a customer lockbox request after it is issued?  "
+    - content: "How long does the designated approver at the customer organization have to respond to a Customer Lockbox request after it is issued?  "
       choices:
       - content: "12 hours"
         isCorrect: true
@@ -50,5 +50,5 @@ quiz:
         explanation: "Access can be granted for unique access IDs only."
       - content: "Just-in-time  "
         isCorrect: true
-        explanation: "In the rare instance when a Microsoft engineer needs access to your data, you grant access only to data required to resolve the issue and for a limited amount of time which is considered just-in-time access."
+        explanation: "In the rare instance when a Microsoft engineer needs access to your data, you grant access only to data required to resolve the issue and for a limited amount of time, which is considered just-in-time access."
       
