--- a/learn-m365-pr/wwl/manage-virtual-desktops/6-knowledge-check.yml
+++ b/learn-m365-pr/wwl/manage-virtual-desktops/6-knowledge-check.yml
@@ -17,7 +17,7 @@ content: |
 quiz:
   title: "Check your knowledge"
   questions:
-  - content: "Contoso is interested in deploying Windows as virtual sessions. The company has 150 seats, and it wants a solution that provides ready-to-use Cloud PCs with simple management options. It doesn't want any licensing prerequisites or any dependencies on Active Directory. Given these requirements, which of the following virtual desktop solutions should Contoso use?"
+  - content: "Contoso is interested in deploying Windows as virtual sessions. The company has 150 seats, and it wants a solution that provides ready-to-use Cloud PCs with simple management options. It doesn't want any licensing prerequisites or any dependencies on Active Directory. Given these requirements, which of the following solutions should Contoso use?"
     choices:
     - content: "Windows 365 Enterprise"
       isCorrect: false
@@ -28,9 +28,9 @@ quiz:
     - content: "Windows 365 Business"
       isCorrect: true
       explanation: "Correct. This Windows 365 edition is made specifically for use in smaller companies (up to 300 seats) who want ready-to-use Cloud PCs with simple management options. There are no licensing prerequisites to set up Windows 365 Business. There are no dependencies on Azure or Active Directory. It's purchased through the Microsoft 365 admin center or the Windows 365 product site."
-  - content: "As the Desktop Administrator for Lucerne Publishing, Patti Fernandez wants to deploy Windows as virtual sessions rather than deploying Windows to clients. Given the company's limited resources, Patti is looking for a virtualization solution that's the easiest to deploy and manage, and that doesn't require provisioning and management servers and server roles like the gateway, connection broker, diagnostics, load balancing, and licensing. Given these requirements, which of the following solutions should Patti use to deploy Windows as virtual sessions?"
+  - content: "As the Desktop Administrator for Lucerne Publishing, Patti Fernandez wants to deploy Windows as virtual sessions rather than deploying Windows to clients. Given the company's limited resources, Patti is looking for a virtualization solution that's flexible but to deploy and manage, and that doesn't require provisioning and management servers and server roles like the gateway, connection broker, diagnostics, load balancing, and licensing. Given these requirements, which of the following solutions should Patti use to deploy Windows as virtual sessions?"
     choices:
-    - content: "Virtual Desktop Infrastructure (VDI)"
+    - content: "On-premises Virtual Desktop Infrastructure (VDI)"
       isCorrect: false
       explanation: "Incorrect. Because VDI is supported by extensive collections of VMs running on top of hypervisor software, VDI environments can get more complex than remote desktop environments. Try again."
     - content: "Remote Desktop Services (RDS)"
