--- a/learn-m365-pr/wwl/manage-virtual-desktops/6-knowledge-check.yml
+++ b/learn-m365-pr/wwl/manage-virtual-desktops/6-knowledge-check.yml
@@ -4,7 +4,7 @@ title: Knowledge check
 metadata:
   title: Knowledge check
   description: "Knowledge check"
-  ms.date: 10/08/2022
+  ms.date: 10/09/2022
   author: wwlpublish
   ms.author: brhinkel
   ms.topic: interactive-tutorial
@@ -28,7 +28,7 @@ quiz:
     - content: "Windows 365 Business"
       isCorrect: true
       explanation: "Correct. This Windows 365 edition is made specifically for use in smaller companies (up to 300 seats) who want ready-to-use Cloud PCs with simple management options. There are no licensing prerequisites to set up Windows 365 Business. There are no dependencies on Azure or Active Directory. It's purchased through the Microsoft 365 admin center or the Windows 365 product site."
-  - content: "As the Desktop Administrator for Lucerne Publishing, Patti Fernandez wants to deploy Windows as virtual sessions rather than deploying Windows to clients. Given the company's limited resources, Patti is looking for a virtualization solution that's flexible but to deploy and manage, and that doesn't require provisioning and management servers and server roles like the gateway, connection broker, diagnostics, load balancing, and licensing. Given these requirements, which of the following solutions should Patti use to deploy Windows as virtual sessions?"
+  - content: "As the Desktop Administrator for Lucerne Publishing, Patti Fernandez wants to deploy Windows as virtual sessions rather than deploying Windows to clients. Given the company's limited resources, Patti is looking for a virtualization solution that's flexible but easy to deploy and manage, and that doesn't require provisioning and management servers and server roles like the gateway, connection broker, diagnostics, load balancing, and licensing. Given these requirements, which of the following solutions should Patti use to deploy Windows as virtual sessions?"
     choices:
     - content: "On-premises Virtual Desktop Infrastructure (VDI)"
       isCorrect: false
